<resources>
    <string name="app_name">IdentifyBookApp</string>
    <string name="main_button_find_book">Find Book</string>
    <string name="main_button_manager">Manager Mode</string>
    <string name="findbook_button_scan_barcode">Scan Barcode</string>
    <string name="findbook_button_nfc">NFC</string>
    <string name="findbook_button_reverse_image_search">Reverse Image Search</string>
    <string name="findbook_button_ocr">OCR</string>
    <string name="scan_nfc_default_text">Place your phone on top of the RFID tag. Hold it until the tag is detected</string>
    <string name="manager_button_view_displays">View Displays</string>
    <string name="manager_button_switch_to_user">Back To User</string>
    <string name="manager_button_create_display">Create Display</string>
    <string name="display_name_hint">Display Name</string>
    <string name="display_button_finish_display">Done</string>
    <string name="crop_button">Done</string>
    <string name="searching">Searching...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
