<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dimebag.identifybookapp.ActivityFindBook">

    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/findbook_button_scan_barcode"
        android:id="@+id/findbook_button_barcode"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/findbook_button_nfc"
        android:id="@+id/findbook_button_nfc"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/findbook_button_barcode"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/findbook_button_ocr"
        android:id="@+id/findbook_button_ocr"
        android:layout_below="@+id/findbook_button_nfc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/findbook_button_reverse_image_search"
        android:id="@+id/findbook_button_reverse_image_search"
        android:layout_below="@+id/findbook_button_ocr"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />
</RelativeLayout>
